# devLLM

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ImportProjectModal.tsx  NewProjectModal.tsx  ProjectCard.tsx
src/store/: projectStore.ts
src/types/: project.ts
